aura-modules/src/test/modules/invalidmodule/examples-non-existant/__doc__/examples-non-existant.auradoc
<aura:documentation>
    <aura:description>
        <p>Usage in <code>Aura</code>.</p>
    </aura:description>
</aura:documentation>